Package_Tools/include-C/Ubuntu_26.04/gtk-4.0/gtk/print/h/gtkprintsettings.pp


function gtk_print_settings_get_type:TGType;cdecl;external;
function gtk_print_settings_new:PGtkPrintSettings;cdecl;external;
function gtk_print_settings_copy(other:PGtkPrintSettings):PGtkPrintSettings;cdecl;external;
(* Const before type ignored *)
function gtk_print_settings_new_from_file(file_name:Pchar; error:PPGError):PGtkPrintSettings;cdecl;external;
(* Const before type ignored *)
function gtk_print_settings_load_file(settings:PGtkPrintSettings; file_name:Pchar; error:PPGError):Tgboolean;cdecl;external;
(* Const before type ignored *)
function gtk_print_settings_to_file(settings:PGtkPrintSettings; file_name:Pchar; error:PPGError):Tgboolean;cdecl;external;
(* Const before type ignored *)
function gtk_print_settings_new_from_key_file(key_file:PGKeyFile; group_name:Pchar; error:PPGError):PGtkPrintSettings;cdecl;external;
(* Const before type ignored *)
function gtk_print_settings_load_key_file(settings:PGtkPrintSettings; key_file:PGKeyFile; group_name:Pchar; error:PPGError):Tgboolean;cdecl;external;
(* Const before type ignored *)
procedure gtk_print_settings_to_key_file(settings:PGtkPrintSettings; key_file:PGKeyFile; group_name:Pchar);cdecl;external;
(* Const before type ignored *)
function gtk_print_settings_has_key(settings:PGtkPrintSettings; key:Pchar):Tgboolean;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
function gtk_print_settings_get(settings:PGtkPrintSettings; key:Pchar):Pchar;cdecl;external;
(* Const before type ignored *)
(* Const before type ignored *)
procedure gtk_print_settings_set(settings:PGtkPrintSettings; key:Pchar; value:Pchar);cdecl;external;
(* Const before type ignored *)
procedure gtk_print_settings_unset(settings:PGtkPrintSettings; key:Pchar);cdecl;external;
procedure gtk_print_settings_foreach(settings:PGtkPrintSettings; func:TGtkPrintSettingsFunc; user_data:Tgpointer);cdecl;external;
(* Const before type ignored *)
function gtk_print_settings_get_bool(settings:PGtkPrintSettings; key:Pchar):Tgboolean;cdecl;external;
(* Const before type ignored *)
procedure gtk_print_settings_set_bool(settings:PGtkPrintSettings; key:Pchar; value:Tgboolean);cdecl;external;
(* Const before type ignored *)
function gtk_print_settings_get_double(settings:PGtkPrintSettings; key:Pchar):Tdouble;cdecl;external;
(* Const before type ignored *)
function gtk_print_settings_get_double_with_default(settings:PGtkPrintSettings; key:Pchar; def:Tdouble):Tdouble;cdecl;external;
(* Const before type ignored *)
procedure gtk_print_settings_set_double(settings:PGtkPrintSettings; key:Pchar; value:Tdouble);cdecl;external;
(* Const before type ignored *)
function gtk_print_settings_get_length(settings:PGtkPrintSettings; key:Pchar; unit:TGtkUnit):Tdouble;cdecl;external;
(* Const before type ignored *)
procedure gtk_print_settings_set_length(settings:PGtkPrintSettings; key:Pchar; value:Tdouble; unit:TGtkUnit);cdecl;external;
(* Const before type ignored *)
function gtk_print_settings_get_int(settings:PGtkPrintSettings; key:Pchar):longint;cdecl;external;
(* Const before type ignored *)
function gtk_print_settings_get_int_with_default(settings:PGtkPrintSettings; key:Pchar; def:longint):longint;cdecl;external;
(* Const before type ignored *)
procedure gtk_print_settings_set_int(settings:PGtkPrintSettings; key:Pchar; value:longint);cdecl;external;
{*
 * GTK_PRINT_SETTINGS_PRINTER:
 *
 * The key used by the “Print to file” printer to store the printer name.
  }
const
  GTK_PRINT_SETTINGS_PRINTER = 'printer';  
{*
 * GTK_PRINT_SETTINGS_ORIENTATION:
 *
 * The key used by the “Print to file” printer to store the orientation.
  }
  GTK_PRINT_SETTINGS_ORIENTATION = 'orientation';  
{*
 * GTK_PRINT_SETTINGS_PAPER_FORMAT:
 *
 * The key used by the “Print to file” printer to store the page format.
  }
  GTK_PRINT_SETTINGS_PAPER_FORMAT = 'paper-format';  
{*
 * GTK_PRINT_SETTINGS_PAPER_WIDTH:
 *
 * The key used by the “Print to file” printer to store the paper width.
  }
  GTK_PRINT_SETTINGS_PAPER_WIDTH = 'paper-width';  
{*
 * GTK_PRINT_SETTINGS_PAPER_HEIGHT:
 *
 * The key used by the “Print to file” printer to store the page height.
  }
  GTK_PRINT_SETTINGS_PAPER_HEIGHT = 'paper-height';  
{*
 * GTK_PRINT_SETTINGS_N_COPIES:
 *
 * The key used by the “Print to file” printer to store the number of copies.
  }
  GTK_PRINT_SETTINGS_N_COPIES = 'n-copies';  
{*
 * GTK_PRINT_SETTINGS_DEFAULT_SOURCE:
 *
 * The key used by the “Print to file” printer to store the default source.
  }
  GTK_PRINT_SETTINGS_DEFAULT_SOURCE = 'default-source';  
{*
 * GTK_PRINT_SETTINGS_QUALITY:
 *
 * The key used by the “Print to file” printer to store the printing quality.
  }
  GTK_PRINT_SETTINGS_QUALITY = 'quality';  
{*
 * GTK_PRINT_SETTINGS_RESOLUTION:
 *
 * The key used by the “Print to file” printer to store the resolution in DPI.
  }
  GTK_PRINT_SETTINGS_RESOLUTION = 'resolution';  
{*
 * GTK_PRINT_SETTINGS_USE_COLOR:
 *
 * The key used by the “Print to file” printer to store whether to print with
 * colors.
  }
  GTK_PRINT_SETTINGS_USE_COLOR = 'use-color';  
{*
 * GTK_PRINT_SETTINGS_DUPLEX:
 *
 * The key used by the “Print to file” printer to store whether to print the
 * output in duplex.
  }
  GTK_PRINT_SETTINGS_DUPLEX = 'duplex';  
{*
 * GTK_PRINT_SETTINGS_COLLATE:
 *
 * The key used by the “Print to file” printer to store whether to collate the
 * printed pages.
  }
  GTK_PRINT_SETTINGS_COLLATE = 'collate';  
{*
 * GTK_PRINT_SETTINGS_REVERSE:
 *
 * The key used by the “Print to file” printer to store whether to reverse the
 * order of the printed pages.
  }
  GTK_PRINT_SETTINGS_REVERSE = 'reverse';  
{*
 * GTK_PRINT_SETTINGS_MEDIA_TYPE:
 *
 * The key used by the “Print to file” printer to store the media type.
 *
 * The set of media types is defined in PWG 5101.1-2002 PWG.
  }
  GTK_PRINT_SETTINGS_MEDIA_TYPE = 'media-type';  
{*
 * GTK_PRINT_SETTINGS_DITHER:
 *
 * The key used by the “Print to file” printer to store the dither used.
  }
  GTK_PRINT_SETTINGS_DITHER = 'dither';  
{*
 * GTK_PRINT_SETTINGS_SCALE:
 *
 * The key used by the “Print to file” printer to store the scale.
  }
  GTK_PRINT_SETTINGS_SCALE = 'scale';  
{*
 * GTK_PRINT_SETTINGS_PRINT_PAGES:
 *
 * The key used by the “Print to file” printer to store which pages to print.
  }
  GTK_PRINT_SETTINGS_PRINT_PAGES = 'print-pages';  
{*
 * GTK_PRINT_SETTINGS_PAGE_RANGES:
 *
 * The key used by the “Print to file” printer to store the array of page ranges
 * to print.
  }
  GTK_PRINT_SETTINGS_PAGE_RANGES = 'page-ranges';  
{*
 * GTK_PRINT_SETTINGS_PAGE_SET:
 *
 * The key used by the “Print to file” printer to store the set of pages to print.
  }
  GTK_PRINT_SETTINGS_PAGE_SET = 'page-set';  
{*
 * GTK_PRINT_SETTINGS_FINISHINGS:
 *
 * The key used by the “Print to file” printer to store the finishings.
  }
  GTK_PRINT_SETTINGS_FINISHINGS = 'finishings';  
{*
 * GTK_PRINT_SETTINGS_NUMBER_UP:
 *
 * The key used by the “Print to file” printer to store the number of pages per
 * sheet.
  }
  GTK_PRINT_SETTINGS_NUMBER_UP = 'number-up';  
{*
 * GTK_PRINT_SETTINGS_NUMBER_UP_LAYOUT:
 *
 * The key used by the “Print to file” printer to store the number of pages per
 * sheet in number-up mode.
  }
  GTK_PRINT_SETTINGS_NUMBER_UP_LAYOUT = 'number-up-layout';  
{*
 * GTK_PRINT_SETTINGS_OUTPUT_BIN:
 *
 * The key used by the “Print to file” printer to store the output bin.
  }
  GTK_PRINT_SETTINGS_OUTPUT_BIN = 'output-bin';  
{*
 * GTK_PRINT_SETTINGS_RESOLUTION_X:
 *
 * The key used by the “Print to file” printer to store the horizontal
 * resolution in DPI.
  }
  GTK_PRINT_SETTINGS_RESOLUTION_X = 'resolution-x';  
{*
 * GTK_PRINT_SETTINGS_RESOLUTION_Y:
 *
 * The key used by the “Print to file” printer to store the vertical resolution
 * in DPI.
  }
  GTK_PRINT_SETTINGS_RESOLUTION_Y = 'resolution-y';  
{*
 * GTK_PRINT_SETTINGS_PRINTER_LPI:
 *
 * The key used by the “Print to file” printer to store the resolution in lines
 * per inch.
  }
  GTK_PRINT_SETTINGS_PRINTER_LPI = 'printer-lpi';  
{*
 * GTK_PRINT_SETTINGS_OUTPUT_DIR:
 *
 * The key used by the “Print to file” printer to store the
 * directory to which the output should be written.
  }
  GTK_PRINT_SETTINGS_OUTPUT_DIR = 'output-dir';  
{*
 * GTK_PRINT_SETTINGS_OUTPUT_BASENAME:
 *
 * The key used by the “Print to file” printer to store the file
 * name of the output without the path to the directory and the
 * file extension.
  }
  GTK_PRINT_SETTINGS_OUTPUT_BASENAME = 'output-basename';  
{*
 * GTK_PRINT_SETTINGS_OUTPUT_FILE_FORMAT:
 *
 * The key used by the “Print to file” printer to store the format
 * of the output. The supported values are “PS” and “PDF”.
  }
  GTK_PRINT_SETTINGS_OUTPUT_FILE_FORMAT = 'output-file-format';  
{*
 * GTK_PRINT_SETTINGS_OUTPUT_URI:
 *
 * The key used by the “Print to file” printer to store the URI
 * to which the output should be written. GTK itself supports
 * only “file://” URIs.
  }
  GTK_PRINT_SETTINGS_OUTPUT_URI = 'output-uri';  
{*
 * GTK_PRINT_SETTINGS_WIN32_DRIVER_VERSION:
 *
 * The key used by the “Print to file” printer to store the 32-bit Windows
 * driver version.
  }
  GTK_PRINT_SETTINGS_WIN32_DRIVER_VERSION = 'win32-driver-version';  
{*
 * GTK_PRINT_SETTINGS_WIN32_DRIVER_EXTRA:
 *
 * The key used by the “Print to file” printer to store 32-bit Windows extra
 * driver.
  }
  GTK_PRINT_SETTINGS_WIN32_DRIVER_EXTRA = 'win32-driver-extra';  
{ Helpers:  }
(* Const before type ignored *)
